# upt-tutorial

./: 1_preliminaries.ipynb  2_image_classification.ipynb  3_image_autoencoder.ipynb  4_pointcloud_classification.ipynb  6_transient_flow_cfd.ipynb  pyproject.toml
